[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libraries"
version = "0.1.2"
authors = [
  { name="Mohanson", email="mohanson@outlook.com" },
]
description = "libraries: a utility library written in python"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
homepage = "https://github.com/mohanson/libraries"
